k8s/settings/postgres.yml
apiVersion: v1
kind: Service
metadata:
  namespace: sample
  name: postgres
spec:
  selector:
    app: postgres
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 3306
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: sample
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:12.0
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: postgres-pv
          mountPath: /var/lib/postgres
      volumes:
      - name: postgres-pv
        persistentVolumeClaim:
          claimName: postgres-pvc
