k8s/settings/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: sample
  name: ingress
spec:
  rules:
  - host: 
    http:
      paths:
      - path: /
        backend:
          serviceName: nginxdjango
          servicePort: 8080
